[gd_scene load_steps=8 format=4 uid="uid://dwylymtr7fhxs"]

[ext_resource type="Script" path="res://scripts/internal_timer_minigame.gd" id="1_q1efr"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="2_biq12"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="3_8vrq1"]
[ext_resource type="PackedScene" uid="uid://d28l37b3mq3il" path="res://scenes/stop_timer_object.tscn" id="3_yoxcp"]
[ext_resource type="FontFile" uid="uid://cbhrp8nn1ptyj" path="res://assets/fonts/DepartureMono-1.422/DepartureMono-Regular.otf" id="4_8uofj"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="5_2yns8"]
[ext_resource type="PackedScene" uid="uid://daybuxnjj7tm5" path="res://scenes/luck_label.tscn" id="6_j0owd"]

[node name="InternalTimerMinigame" type="Node2D"]
script = ExtResource("1_q1efr")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADu/wcAAQAPAAUAAADv/wcAAQAQAAUAAAAQAAcAAQAQAAUAAAARAAcAAQARAAUAAAARAAgAAQARAAYAAAARAAkAAQARAAcAAADu/wgAAQAPAAYAAADu/wkAAQAPAAcAAADv/wkAAQALAA8AAADw/wkAAQALAA8AAADx/wkAAQAQAAcAAADy/wkAAQAQAAcAAADz/wkAAQALAA8AAAD0/wkAAQAQAAcAAAD1/wkAAQAQAAcAAAD2/wkAAQAQAAcAAAD3/wkAAQALAA8AAAD4/wkAAQALAA8AAAD5/wkAAQAQAAcAAAD6/wkAAQALAA8AAAD7/wkAAQAQAAcAAAD8/wkAAQAQAAcAAAD9/wkAAQAQAAcAAAD+/wkAAQAQAAcAAAD//wkAAQALAA8AAAAAAAkAAQAQAAcAAAABAAkAAQALAA8AAAACAAkAAQALAA8AAAADAAkAAQALAA8AAAAEAAkAAQAQAAcAAAAFAAkAAQAQAAcAAAAGAAkAAQAQAAcAAAAHAAkAAQALAA8AAAAIAAkAAQAQAAcAAAAJAAkAAQALAA8AAAAKAAkAAQAQAAcAAAALAAkAAQAQAAcAAAAMAAkAAQALAA8AAAANAAkAAQALAA8AAAAOAAkAAQALAA8AAAAPAAkAAQAQAAcAAAAQAAkAAQAQAAcAAADw/wcAAQAQAAUAAADx/wcAAQAQAAUAAADy/wcAAQAQAAUAAADz/wcAAQAQAAUAAAD0/wcAAQAQAAUAAAD1/wcAAQAQAAUAAAD2/wcAAQAQAAUAAAD3/wcAAQAQAAUAAAD4/wcAAQAQAAUAAAD5/wcAAQAQAAUAAAD6/wcAAQAQAAUAAAD7/wcAAQAQAAUAAAD8/wcAAQAQAAUAAAD9/wcAAQAQAAUAAAD+/wcAAQAQAAUAAAD//wcAAQAQAAUAAAAAAAcAAQAQAAUAAAABAAcAAQAQAAUAAAACAAcAAQAQAAUAAAADAAcAAQAQAAUAAAAEAAcAAQAQAAUAAAAFAAcAAQAQAAUAAAAGAAcAAQAQAAUAAAAHAAcAAQAQAAUAAAAIAAcAAQAQAAUAAAAJAAcAAQAQAAUAAAAKAAcAAQAQAAUAAAALAAcAAQAQAAUAAAAMAAcAAQAQAAUAAAANAAcAAQAQAAUAAAAOAAcAAQAQAAUAAAAPAAcAAQAQAAUAAADv/wgAAQAQAAYAAADw/wgAAQAQAAYAAADx/wgAAQAQAAYAAADy/wgAAQAQAAYAAADz/wgAAQAQAAYAAAD0/wgAAQAQAAYAAAD1/wgAAQAQAAYAAAD2/wgAAQAQAAYAAAD3/wgAAQAQAAYAAAD4/wgAAQAQAAYAAAD5/wgAAQAQAAYAAAD6/wgAAQAQAAYAAAD7/wgAAQAQAAYAAAD8/wgAAQAQAAYAAAD9/wgAAQAQAAYAAAD+/wgAAQAQAAYAAAD//wgAAQAQAAYAAAAAAAgAAQAQAAYAAAABAAgAAQAQAAYAAAACAAgAAQAQAAYAAAADAAgAAQAQAAYAAAAEAAgAAQAQAAYAAAAFAAgAAQAQAAYAAAAGAAgAAQAQAAYAAAAHAAgAAQAQAAYAAAAIAAgAAQAQAAYAAAAJAAgAAQAQAAYAAAAKAAgAAQAQAAYAAAALAAgAAQAQAAYAAAAMAAgAAQAQAAYAAAANAAgAAQAQAAYAAAAOAAgAAQAQAAYAAAAPAAgAAQAQAAYAAAAQAAgAAQAQAAYAAADw//f/AQARABEAAAAPAPf/AQATABEAAADw//n/AQARABIAAADw//j/AQARABIAAADw//r/AQARABIAAADw//v/AQARABIAAADw//z/AQARABIAAADw//3/AQARABIAAADw//7/AQARABIAAADw////AQARABMAAAAPAP//AQATABMAAAAPAPj/AQATABIAAAAPAPn/AQATABIAAAAPAPr/AQATABIAAAAPAPv/AQATABIAAAAPAPz/AQATABIAAAAPAP3/AQATABIAAAAPAP7/AQATABIAAADx////AQASABMAAADy////AQASABMAAADz////AQASABMAAAD0////AQASABMAAAD1////AQASABMAAAD2////AQASABMAAAD3////AQASABMAAAD4////AQASABMAAAD5////AQASABMAAAD6////AQASABMAAAD7////AQASABMAAAD8////AQASABMAAAD9////AQASABMAAAD+////AQASABMAAAD/////AQASABMAAAAAAP//AQASABMAAAABAP//AQASABMAAAACAP//AQASABMAAAADAP//AQASABMAAAAEAP//AQASABMAAAAFAP//AQASABMAAAAGAP//AQASABMAAAAHAP//AQASABMAAAAIAP//AQASABMAAAAJAP//AQASABMAAAAKAP//AQASABMAAAALAP//AQASABMAAAAMAP//AQASABMAAAANAP//AQASABMAAAAOAP//AQASABMAAADx//f/AQASABEAAADy//f/AQASABEAAADz//f/AQASABEAAAD0//f/AQASABEAAAD1//f/AQASABEAAAD2//f/AQASABEAAAD3//f/AQASABEAAAD4//f/AQASABEAAAD5//f/AQASABEAAAD6//f/AQASABEAAAD7//f/AQASABEAAAD8//f/AQASABEAAAD9//f/AQASABEAAAD+//f/AQASABEAAAD///f/AQASABEAAAAAAPf/AQASABEAAAABAPf/AQASABEAAAACAPf/AQASABEAAAADAPf/AQASABEAAAAEAPf/AQASABEAAAAFAPf/AQASABEAAAAGAPf/AQASABEAAAAHAPf/AQASABEAAAAIAPf/AQASABEAAAAJAPf/AQASABEAAAAKAPf/AQASABEAAAALAPf/AQASABEAAAAMAPf/AQASABEAAAANAPf/AQASABEAAAAOAPf/AQASABEAAADx//j/AQASABIAAADy//j/AQASABIAAADz//j/AQASABIAAAD0//j/AQASABIAAAD1//j/AQASABIAAAD2//j/AQASABIAAAD3//j/AQASABIAAAD4//j/AQASABIAAAD5//j/AQASABIAAAD6//j/AQASABIAAAD7//j/AQASABIAAAD8//j/AQASABIAAAD9//j/AQASABIAAAD+//j/AQASABIAAAD///j/AQASABIAAAAAAPj/AQASABIAAAABAPj/AQASABIAAAACAPj/AQASABIAAAADAPj/AQASABIAAAAEAPj/AQASABIAAAAFAPj/AQASABIAAAAGAPj/AQASABIAAAAHAPj/AQASABIAAAAIAPj/AQASABIAAAAJAPj/AQASABIAAAAKAPj/AQASABIAAAALAPj/AQASABIAAAAMAPj/AQASABIAAAANAPj/AQASABIAAAAOAPj/AQASABIAAAAOAPn/AQASABIAAAAOAPz/AQASABIAAAAOAP3/AQASABIAAAAOAPr/AQASABIAAAAOAPv/AQASABIAAAAOAP7/AQASABIAAAANAP7/AQASABIAAAAMAP7/AQASABIAAAALAP7/AQASABIAAAAKAP7/AQASABIAAAAJAP7/AQASABIAAAAIAP7/AQASABIAAAAHAP7/AQASABIAAAAGAP7/AQASABIAAAAFAP7/AQASABIAAAAEAP7/AQASABIAAAADAP7/AQASABIAAAACAP7/AQASABIAAAABAP7/AQASABIAAAAAAP7/AQASABIAAAD///7/AQASABIAAAD+//7/AQASABIAAAD9//7/AQASABIAAAD8//7/AQASABIAAAD7//7/AQASABIAAAD6//7/AQASABIAAAD5//7/AQASABIAAAD4//7/AQASABIAAAD3//7/AQASABIAAAD2//7/AQASABIAAAD1//7/AQASABIAAAD0//7/AQASABIAAADz//7/AQASABIAAADy//7/AQASABIAAADx//7/AQASABIAAADx//3/AQASABIAAADx//z/AQASABIAAADx//v/AQASABIAAADx//r/AQASABIAAADx//n/AQASABIAAADy//n/AQASABIAAADz//n/AQASABIAAAD0//n/AQASABIAAAD1//n/AQASABIAAAD2//n/AQASABIAAAD3//n/AQASABIAAAD4//n/AQASABIAAAD5//n/AQASABIAAAD6//n/AQASABIAAAD7//n/AQASABIAAAD8//n/AQASABIAAAD9//n/AQASABIAAAD+//n/AQASABIAAAD///n/AQASABIAAAAAAPn/AQASABIAAAABAPn/AQASABIAAAACAPn/AQASABIAAAADAPn/AQASABIAAAAEAPn/AQASABIAAAAFAPn/AQASABIAAAAGAPn/AQASABIAAAAHAPn/AQASABIAAAAIAPn/AQASABIAAAAJAPn/AQASABIAAAAKAPn/AQASABIAAAALAPn/AQASABIAAAAMAPn/AQASABIAAAANAPn/AQASABIAAAANAPr/AQASABIAAAANAPv/AQASABIAAAANAPz/AQASABIAAAANAP3/AQASABIAAAAMAP3/AQASABIAAAALAP3/AQASABIAAAAKAP3/AQASABIAAAAJAP3/AQASABIAAAAIAP3/AQASABIAAAAHAP3/AQASABIAAAAGAP3/AQASABIAAAAFAP3/AQASABIAAAAEAP3/AQASABIAAAADAP3/AQASABIAAAACAP3/AQASABIAAAABAP3/AQASABIAAAAAAP3/AQASABIAAAD///3/AQASABIAAAD+//3/AQASABIAAAD9//3/AQASABIAAAD8//3/AQASABIAAAD7//3/AQASABIAAAD6//3/AQASABIAAADz//3/AQASABIAAADy//3/AQASABIAAAD0//3/AQASABIAAAD1//3/AQASABIAAAD2//3/AQASABIAAAD3//3/AQASABIAAAD4//3/AQASABIAAAD5//3/AQASABIAAADy//r/AQASABIAAADz//r/AQASABIAAAD0//r/AQASABIAAAD1//r/AQASABIAAAD2//r/AQASABIAAAD3//r/AQASABIAAAD4//r/AQASABIAAAD5//r/AQASABIAAAD6//r/AQASABIAAAD7//r/AQASABIAAAD8//r/AQASABIAAAD9//r/AQASABIAAAD+//r/AQASABIAAAD///r/AQASABIAAAAAAPr/AQASABIAAAABAPr/AQASABIAAAACAPr/AQASABIAAAADAPr/AQASABIAAAAEAPr/AQASABIAAAAFAPr/AQASABIAAAAGAPr/AQASABIAAAAHAPr/AQASABIAAAAIAPr/AQASABIAAAAJAPr/AQASABIAAAAKAPr/AQASABIAAAALAPr/AQASABIAAAAMAPr/AQASABIAAAAMAPv/AQASABIAAAALAPv/AQASABIAAAAKAPv/AQASABIAAAAJAPv/AQASABIAAAAIAPv/AQASABIAAAAHAPv/AQASABIAAAAGAPv/AQASABIAAAAFAPv/AQASABIAAAAEAPv/AQASABIAAAADAPv/AQASABIAAAACAPv/AQASABIAAAABAPv/AQASABIAAAAAAPv/AQASABIAAAD///v/AQASABIAAAD+//v/AQASABIAAAD9//v/AQASABIAAAD8//v/AQASABIAAAD7//v/AQASABIAAAD6//v/AQASABIAAAD5//v/AQASABIAAAD4//v/AQASABIAAAD3//v/AQASABIAAAD2//v/AQASABIAAAD1//v/AQASABIAAAD0//v/AQASABIAAADz//v/AQASABIAAADy//v/AQASABIAAADy//z/AQASABIAAADz//z/AQASABIAAAD0//z/AQASABIAAAD1//z/AQASABIAAAD2//z/AQASABIAAAD3//z/AQASABIAAAD4//z/AQASABIAAAD5//z/AQASABIAAAD6//z/AQASABIAAAD7//z/AQASABIAAAD8//z/AQASABIAAAD9//z/AQASABIAAAD+//z/AQASABIAAAD///z/AQASABIAAAAAAPz/AQASABIAAAABAPz/AQASABIAAAACAPz/AQASABIAAAADAPz/AQASABIAAAAEAPz/AQASABIAAAAFAPz/AQASABIAAAAGAPz/AQASABIAAAAHAPz/AQASABIAAAAIAPz/AQASABIAAAAJAPz/AQASABIAAAAKAPz/AQASABIAAAALAPz/AQASABIAAAAMAPz/AQASABIAAAD//wYAAQAAAAAAAAD//wUAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAADu/wUAAQAAAAAAAADu/wQAAQAAAAAAAADu/wMAAQAAAAAAAADu/wIAAQAAAAAAAADu/wEAAQAAAAAAAADu/wAAAQAAAAAAAADv/wAAAQAAAAAAAADw/wAAAQAAAAAAAADx/wAAAQAAAAAAAADy/wAAAQAAAAAAAADz/wAAAQAAAAAAAAD0/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAADu/wYAAQAAAAAAAADv/wYAAQAAAAAAAADw/wYAAQAAAAAAAADx/wYAAQAAAAAAAADy/wYAAQAAAAAAAADz/wYAAQAAAAAAAAD0/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wQAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAACAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAAPAAYAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAAPAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAALAAUAAQAAAAAAAAAKAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAQAAQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD0/wQAAQAAAAAAAADz/wQAAQAAAAAAAADy/wQAAQAAAAAAAADx/wQAAQAAAAAAAADw/wQAAQAAAAAAAADv/wQAAQAAAAAAAADv/wUAAQAAAAAAAADw/wUAAQAAAAAAAADx/wUAAQAAAAAAAADy/wUAAQAAAAAAAADz/wUAAQAAAAAAAAD0/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD8/wUAAQAAAAAAAADv/wEAAQAAAAAAAADw/wEAAQAAAAAAAADx/wEAAQAAAAAAAADy/wEAAQAAAAAAAADz/wEAAQAAAAAAAAD0/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAEAAQAAAAAAAAAOAAEAAQAAAAAAAAAPAAEAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAPAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAANAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAAAAAD//wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD8/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD4/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD2/wMAAQAAAAAAAAD1/wMAAQAAAAAAAAD0/wMAAQAAAAAAAADz/wMAAQAAAAAAAADy/wMAAQAAAAAAAADx/wMAAQAAAAAAAADw/wMAAQAAAAAAAADv/wMAAQAAAAAAAADv/wIAAQAAAAAAAADw/wIAAQAAAAAAAADx/wIAAQAAAAAAAADy/wIAAQAAAAAAAADz/wIAAQAAAAAAAAD0/wIAAQAAAAAAAAD1/wIAAQAAAAAAAAD2/wIAAQAAAAAAAAD3/wIAAQAAAAAAAAD4/wIAAQAAAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAALAAIAAQAAAAAAAAAMAAIAAQAAAAAAAAANAAIAAQAAAAAAAAAOAAIAAQAAAAAAAAAPAAIAAQAAAAAAAAAQAPb/AQAAAAAAAAARAPb/AQAAAAAAAAARAPf/AQAAAAAAAAARAPj/AQAAAAAAAAARAPn/AQAAAAAAAAARAPr/AQAAAAAAAAARAPv/AQAAAAAAAAARAPz/AQAAAAAAAAARAP3/AQAAAAAAAAARAP7/AQAAAAAAAAARAP//AQAAAAAAAAAQAP//AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP3/AQAAAAAAAAAQAPz/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPr/AQAAAAAAAAAQAPj/AQAAAAAAAAAQAPf/AQAAAAAAAAAQAPn/AQAAAAAAAAAPAPb/AQAAAAAAAAAOAPb/AQAAAAAAAAANAPb/AQAAAAAAAAAMAPb/AQAAAAAAAAALAPb/AQAAAAAAAAAKAPb/AQAAAAAAAAAJAPb/AQAAAAAAAAAIAPb/AQAAAAAAAAAHAPb/AQAAAAAAAAAGAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAEAPb/AQAAAAAAAAADAPb/AQAAAAAAAAACAPb/AQAAAAAAAAABAPb/AQAAAAAAAAAAAPb/AQAAAAAAAAD///b/AQAAAAAAAAD+//b/AQAAAAAAAAD9//b/AQAAAAAAAAD8//b/AQAAAAAAAAD7//b/AQAAAAAAAAD6//b/AQAAAAAAAAD5//b/AQAAAAAAAAD4//b/AQAAAAAAAAD3//b/AQAAAAAAAAD2//b/AQAAAAAAAAD1//b/AQAAAAAAAAD0//b/AQAAAAAAAADz//b/AQAAAAAAAADy//b/AQAAAAAAAADx//b/AQAAAAAAAADw//b/AQAAAAAAAADv//b/AQAAAAAAAADu//b/AQAAAAAAAADu//f/AQAAAAAAAADu//j/AQAAAAAAAADu//n/AQAAAAAAAADu//r/AQAAAAAAAADu//v/AQAAAAAAAADu//z/AQAAAAAAAADu//3/AQAAAAAAAADu//7/AQAAAAAAAADu////AQAAAAAAAADv//f/AQAAAAAAAADv//j/AQAAAAAAAADv//n/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADv//7/AQAAAAAAAADv////AQAAAAAAAADt//X/AQASABIAAADt//b/AQASABIAAADt//f/AQASABIAAADt//j/AQASABIAAADt//n/AQASABIAAADu//X/AQAAAAAAAADv//X/AQAAAAAAAADw//X/AQAAAAAAAADx//X/AQAAAAAAAADy//X/AQAAAAAAAADz//X/AQAAAAAAAAD0//X/AQAAAAAAAAD1//X/AQAAAAAAAAD2//X/AQAAAAAAAAD3//X/AQAAAAAAAAD4//X/AQAAAAAAAAD5//X/AQAAAAAAAAD6//X/AQAAAAAAAAD7//X/AQAAAAAAAAD8//X/AQAAAAAAAAD9//X/AQAAAAAAAAD+//X/AQAAAAAAAAD///X/AQAAAAAAAAAAAPX/AQAAAAAAAAABAPX/AQAAAAAAAAACAPX/AQAAAAAAAAADAPX/AQAAAAAAAAAEAPX/AQAAAAAAAAAFAPX/AQAAAAAAAAAGAPX/AQAAAAAAAAAHAPX/AQAAAAAAAAAIAPX/AQAAAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQAAAAAAAAALAPX/AQAAAAAAAAAMAPX/AQAAAAAAAAANAPX/AQAAAAAAAAAOAPX/AQAAAAAAAAAPAPX/AQAAAAAAAAAQAPX/AQAAAAAAAAARAPX/AQAAAAAAAAASAPX/AQASABIAAAASAPb/AQASABIAAAASAPf/AQASABIAAAASAPj/AQASABIAAAASAPn/AQASABIAAAASAPr/AQASABIAAAASAPv/AQASABIAAAASAPz/AQASABIAAAASAP3/AQASABIAAAASAP7/AQASABIAAAASAP//AQASABIAAAASAAAAAQASABIAAAASAAEAAQASABIAAAASAAIAAQASABIAAAASAAMAAQASABIAAAASAAQAAQASABIAAAASAAUAAQASABIAAAASAAYAAQASABIAAAASAAcAAQASABIAAAASAAgAAQASABIAAAASAAkAAQASABIAAAASAAoAAQASABIAAAARAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAD//woAAQAAAAAAAAD+/woAAQAAAAAAAAD9/woAAQAAAAAAAAD8/woAAQAAAAAAAAD7/woAAQAAAAAAAAD6/woAAQAAAAAAAAD5/woAAQAAAAAAAAD4/woAAQAAAAAAAAD3/woAAQAAAAAAAAD2/woAAQAAAAAAAAD1/woAAQAAAAAAAAD0/woAAQAAAAAAAADz/woAAQAAAAAAAADy/woAAQAAAAAAAADx/woAAQAAAAAAAADw/woAAQAAAAAAAADv/woAAQAAAAAAAADu/woAAQAAAAAAAADt/woAAQASABIAAADt/wkAAQASABIAAADt/wgAAQASABIAAADt/wcAAQASABIAAADt/wYAAQASABIAAADt/wUAAQASABIAAADt/wQAAQASABIAAADt/wMAAQASABIAAADt/wIAAQASABIAAADt/wEAAQASABIAAADt/wAAAQASABIAAADt////AQASABIAAADt//7/AQASABIAAADt//3/AQASABIAAADt//z/AQASABIAAADt//v/AQASABIAAADt//r/AQASABIAAAA=")
tile_set = ExtResource("2_biq12")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="StopTimerObject" parent="." instance=ExtResource("3_yoxcp")]
position = Vector2(0, 49)

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -75.0
offset_right = 126.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_8uofj")
theme_override_font_sizes/font_size = 64
text = "10.0"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161
text_overrun_behavior = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CountdownLabel" parent="." instance=ExtResource("5_2yns8")]

[node name="LuckLabel" parent="." instance=ExtResource("6_j0owd")]
visible = false
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 5.0
offset_bottom = 28.0
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("3_8vrq1")]
position = Vector2(-79, 48)

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
